Updated project files

--- a/part-5/.env.example
+++ b/part-5/.env.example
@@ -1,6 +1,7 @@
 # Copy this file to .env: cp .env.example .env
 
 SECRET_KEY=change-this-to-a-random-string
+DATABASE_URL=postgresql://postgres:Omderle@2004@localhost:5432/flask_products
 
 # Database URL (choose one)
 DATABASE_URL=sqlite:///products.db
